# history-view-website

./: .env-example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  requirements.txt  requirements_lock.txt  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
categories/: README.md
config/: README.md  categories.md  categories.yaml  domain-category-map-example.yaml
data/: .gitignore  README.md
docs/: README.md  README_development.md  SPEC_v1.md  TODO.md
mocks/: README.md
prompts/: analyze_domains_and_block.prompt.md  initial.prompt.md  initial_prompt.md  make_category_map.prompt.md
raw-data/: .gitignore  README.md
scripts/: AGENTS.md  assist-category-map.py  backup-data.py  build.sh  check-cov.sh  deploy.sh  dev.sh  find-favicons.py  generate-datasets.py  init-db.py  load-chrome.py  load-edge.py  load-takeout.py  populate-categories-from-map.py  populate-db-categories-from-map.py  run-codex-no-sandbox.sh  update-requirements.sh
scripts/common/: preamble.sh
scripts/lib/: __init__.py  aggregator.py  domain_map.py  history_db.py  utils.py
scripts/tests/: README.md  conftest.py  test_aggregator.py  test_domain_map.py  test_favicons.py  test_history_db.py  test_loaders.py  test_utils.py
src/: App.css  App.test.tsx  App.tsx  app-utils.ts  index.css
