[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "history-view-website-tools"
version = "0.1.0"
description = "Data-prep tooling for the history view website."
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.2",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.12.0",
  "pre-commit>=3.8.0",
  "pyright>=1.1.390",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.2",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [
  ".venv",
  "data",
  "dist",
  "node_modules",
  "public",
  "raw-data",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "B",
  "I",
  "UP",
  "ARG",
  "C4",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# ignore_missing_imports = true
enable_error_code = ["ignore-without-code"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["scripts"]
ignore = ["node_modules", ".venv", "dist"]
venvPath = "."
venv = ".venv"
reportMissingImports = "error"
reportUnknownArgumentType = false
reportUnknownVariableType = false

[tool.history-view]
python-version = "3.14"

[tool.hatch.build.targets.wheel]
only-include = ["scripts"]

[tool.hatch.build.targets.sdist]
only-include = ["scripts"]
